# otodom-listener-bot

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  recon.py
.github/workflows/: deploy.yml
app/: Dockerfile  config.py  db.py  ioc_container.py  main.py  migrate.py  poller.py  queries.py  storage.py
app/api/: routes.py
app/bot/: __init__.py  handlers.py  router.py  schemas.py  telegram.py
app/otodom/: __init__.py  fetcher.py  models.py  parser.py
app/sql/: schema.sql  seen.sql  subscribers.sql
deploy/: deploy.sh  nginx.conf.sample  setup-tls.sh
migrations/: 0001_initial_schema.sql
tests/: test_format.py  test_parser.py
